--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,16 @@
 
     <TextView
         android:id="@+id/sort_by_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
+        style="@style/WrapLayout"
+        android:padding="@dimen/padding_medium"
         android:text="@string/sort_by"
         app:layout_constraintEnd_toStartOf="@id/sort_by_spinner"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sort_by_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
+        style="@style/WrapLayout"
+        android:padding="@dimen/padding_medium"
         app:layout_constraintBottom_toBottomOf="@id/sort_by_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/sort_by_label" />
@@ -27,7 +25,6 @@
         android:id="@+id/movies_recycler_view"
         style="@style/ContainerLayout"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
