--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,14 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
+    <style name="MovieTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/movie_title_panel_height</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingStart">@dimen/padding_medium</item>
+        <item name="android:paddingEnd">@dimen/padding_medium</item>
+        <item name="android:textSize">@dimen/text_size_big</item>
+    </style>
 </resources>
