--- a/app/src/main/res/layout/item_movie_trailer.xml
+++ b/app/src/main/res/layout/item_movie_trailer.xml
@@ -12,6 +12,7 @@
         android:gravity="center"
         android:padding="@dimen/padding_medium"
         android:textAllCaps="true"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
