--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -16,6 +16,18 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Movie title goes here" />
 
+        <ImageButton
+            android:id="@+id/movie_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/favorite"
+            android:src="@drawable/ic_favorite_border_white_48dp"
+            app:layout_constraintBottom_toBottomOf="@id/movie_title"
+            app:layout_constraintEnd_toEndOf="@id/movie_title"
+            app:layout_constraintTop_toTopOf="@id/movie_title" />
+
         <ImageView
             android:id="@+id/movie_poster"
             android:layout_width="@dimen/movie_poster_width"
@@ -77,7 +89,6 @@
         <TextView
             android:id="@+id/movie_reviews_title"
             style="@style/MovieDetailSubtitle"
-            android:layout_marginTop="@dimen/margin_small"
             android:text="@string/reviews"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/movie_trailers_recycler_view" />
